--- a/views/result.ejs
+++ b/views/result.ejs
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-    <div class="login">
-        <form action="/check" method="post">
-            <input type="password" placeholder="Password" name="password">
-            <input type="submit" value="crack">
-        </form>
+    <div class="container">
+        <p> time of running: <%= timeOfEx %> </p>
+        <p> number of tries: <%= tries %> </p>
+        <p> password: <%= password %> </p>
     </div>
 </body>
 
