--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <div class="login">
-        <form action="/check" method="post">
-            <input type="password" placeholder="Password" name="password">
-            <input type="submit" value="crack">
-        </form>
+    <div class="container">
+        <div class="login">
+            <form action="/check" method="post">
+                <input type="password" placeholder="Password" name="password">
+                <input type="submit" value="crack">
+            </form>
+        </div>
     </div>
 </body>
 
